--- a/css/includes/mixins.styl
+++ b/css/includes/mixins.styl
@@ -599,3 +599,16 @@ right-border-magenta()
     +above(xl)
         width 20px
         top -95px
+
+
+full-centered()
+    display flex
+    justify-content center
+    align-items center
+    
+full-fill()
+    position absolute
+    top 0
+    left 0 
+    right 0
+    bottom 0
