--- a/css/includes/settings.styl
+++ b/css/includes/settings.styl
@@ -7,10 +7,24 @@ $scale-names = rupture.scale-names
 
 $ptr = 'PT Rouble Sans', sans-serif
 
-$baseFontColor = #373737
-$baseLinkColor = #0000aa
+$baseFontColor = #000000
+$baseLinkColor = #000000
 
 $imgHref = '/assets/images/'
 $imgPath = '../../assets/images/'
 
 $horizontalPadding = 30px 30px 40px 50px 60px 80px
+
+
+$darkBtnColor = #161717
+
+$baseGradient = linear-gradient(to right, rgba(0,148,255,1) 0%,rgba(49,39,131,1) 100%)
+
+$reverseGradient = linear-gradient(to right, rgba(49,39,131,1) 0%,rgba(0,148,255,1) 100%)
+
+$whiteGradient = linear-gradient(to right, rgba(255,255,255,1) 0%,rgba(243,243,243,1) 100%)
+
+$baseTransition = all .2s ease-in-out
+
+$Gotham = 'Gotham Pro', sans-serif
+
