--- a/css/blocks/breadcrumbs.styl
+++ b/css/blocks/breadcrumbs.styl
@@ -1,25 +1,18 @@
 .breadcrumbs
-    position relative
-    z-index 100
-    margin-top 40px
-    &__items
-        list-style none
-        margin 0px
-        padding 0px
-    &__item
-        margin 0px
-        padding 0px
-        padding-bottom 5px
-        font-size 14px
-        line-height unit(19/@font-size, em)
-        display inline-block
-        color #c4c4c4
-        margin-right 3px
-        +above(xl)
-            font-size 16px
-            line-height unit(22/@font-size, em)
-    &__link
-        border 0px
-        margin-right 3px
-        &-current
-            color $baseFontColor
+    set('font-size', 14px 15px 16px 18px)
+    color #8C8C8C
+    font-family $Gotham
+    margin-bottom 20px!important
+    a 
+        color #8C8C8C
+    ul
+        display flex
+        li:not(:last-child)
+            padding-right 10px
+            margin-right 10px
+            position relative
+            &:after
+                content '/'
+                position absolute
+                right -5px
+
