--- a/css/blocks/mobile-toolbar.styl
+++ b/css/blocks/mobile-toolbar.styl
@@ -6,11 +6,11 @@
 	bottom 0px
 	width 100%
 	height 53px
-	background #373737
+	background #fff
 	margin 0px
 	padding 0px
 	z-index 2002
-	justify-content space-evenly
+	justify-content space-around
 	align-items center
 	+above(sm)
 		display none
@@ -26,3 +26,17 @@
 		display block
 		margin 0px
 		padding 0px
+	&__burger
+		button
+			.burger-btn
+				burger(, , , 23px)
+	&__search
+		button 
+			padding 0
+	&__cab,
+	&__question
+		.icon
+			height .75em
+			width .75em
+		
+	
