--- a/css/includes/fonts.styl
+++ b/css/includes/fonts.styl
@@ -3,3 +3,31 @@
 	src url('../fonts/PTRoubleSans.woff2') format('woff2'), url('../fonts/PTRoubleSans.woff') format('woff')
 	font-weight normal
 	font-style normal
+	
+@font-face 
+	font-family 'Gotham Pro'
+	src url('../fonts/GothamPro.eot')
+	src url('../fonts/GothamPro.eot?#iefix') format('embedded-opentype'),
+	url('../fonts/GothamPro.woff') format('woff'),
+	url('../fonts/GothamPro.ttf') format('truetype')
+	font-weight normal
+	font-style normal
+	
+@font-face 
+	font-family 'Gotham Pro'
+	src url('../fonts/GothamPro-Black.eot')
+	src url('../fonts/GothamPro-Black.eot?#iefix') format('embedded-opentype'),	url('../fonts/GothamPro-Black.woff') format('woff'), url('../fonts/GothamPro-Black.ttf') format('truetype')
+	font-weight bold
+	font-style normal
+	
+@font-face 
+	font-family 'Roboto'
+	src url('../fonts/Roboto-Regular.ttf') format('truetype')
+	font-weight normal
+	font-style normal
+	
+@font-face 
+	font-family 'Roboto'
+	src url('../fonts/Roboto-Bold.ttf') format('truetype')
+	font-weight bold
+	font-style normal
