--- a/css/includes/vendor.styl
+++ b/css/includes/vendor.styl
@@ -1,3 +1,4 @@
 @require "../../vendor/normalize.css"
 @require "../../vendor/fancybox-3.2.10/jquery.fancybox.css"
 @require "../../vendor/OwlCarousel2-2.2.1/assets/owl.carousel.css"
+@require "../../vendor/air-datepicker/datepicker.min.css"
